User controller: Add refresh token route
