# api/routes/v1/user_auth.go
@@ -29,4 +29,5 @@ func (u UserAuthRoutes) Setup() {
 	u.handler.Gin.POST("/login", u.controller.AuthenticateUser)
 	u.handler.Gin.POST("/verify", u.controller.ValidateCode)
 	u.handler.Gin.POST("/logout", u.jwtAuthMiddleware.Handle, u.controller.LogoutUser)
+	u.handler.Gin.POST("/refresh", u.controller.RefreshTokens)
 }
